fixing scrollbars

--- a/src/views/About/_about.scss
+++ b/src/views/About/_about.scss
@@ -3,7 +3,6 @@
     height: 100%;
     background: url("../../assets/images/bgImage.jpg");
     background-size: cover;
-    overflow-x: hidden;
 
     #header {
         padding-top: 13vh;
